I removed the overflow-x: hidden on the .swiper-container and added it to the html element instea, hopefully this will remove my overflow issue on mobile but still allow me to take advantage of the slight box shadow added to the .swiper-slide class

--- a/scss/_swiper.scss
+++ b/scss/_swiper.scss
@@ -3,13 +3,8 @@
   width: 100%;
   height: 100%;
 
-  //
   position: relative;
-  overflow-x: hidden;
-}
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
+  // overflow-x: hidden;
 }
 
 .swiper-slide img {
@@ -22,6 +17,11 @@
 }
 
 .swiper-slide {
+  // TEST
+  box-shadow: 0px 0px 30px -20px #f4f4f4;
+  //
+  text-align: center;
+  font-size: 18px;
   transition: 250ms all;
   filter: grayscale(100%);
   cursor: pointer;
